# watchdog

./: LICENSE  README.md  localhosts  remotehosts  scp.sh  start_service.sh  stop_service.sh  watchdog-client-local.service  watchdog-client-remote.service  watchdog-server.service
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
test/: nv_output.txt  nv_output_1.txt  test.py
test/pyserver/: app.py  setup.py
