[package]
name = "watchdog-client"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "^0"
chrono = "^0"
reqwest = { version = "^0", features = ["json", "blocking"] }
tokio = { version = "^1", features = ["full"] }
openssl = { version = "^0", features = ["vendored"] }
clap = { version = "^4", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^2"
log = "^0"
pretty_env_logger = "^0"
