[package]
name = "watchdog-server"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-cors = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
sqlx = { version = "^0", features = ["postgres", "json", "chrono", "runtime-actix-rustls"] }
redis = "^0"
itertools = "^0"
chrono = "^0"
once_cell = "^1"
prettytable-rs = "^0"